# ToDo

./: .gitignore  CMakeLists.txt  README.md
src/forms/: mainwindow.cpp  mainwindow.ui
